--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -57,20 +57,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetcell" rowHeight="120" id="pAo-lV-WPL" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="375" height="120"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetcell" rowHeight="150" id="pAo-lV-WPL" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pAo-lV-WPL" id="jMU-EM-QkF">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Jq-2g-ryn">
-                                            <rect key="frame" x="26" y="11" width="65" height="98"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="65" id="FtH-Ey-deE"/>
-                                                <constraint firstAttribute="height" constant="65" id="LLb-bG-Hwr"/>
-                                            </constraints>
-                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahb-6q-1UR">
                                             <rect key="frame" x="99" y="11" width="69" height="22"/>
                                             <constraints>
@@ -81,31 +74,72 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6f-8F-IY8">
-                                            <rect key="frame" x="99" y="43" width="268" height="67"/>
+                                            <rect key="frame" x="101" y="43" width="266" height="57"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="268" id="Em1-Oq-wX3"/>
+                                                <constraint firstAttribute="height" constant="48" id="Rpt-QS-6it"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OOM-HZ-Pjs" userLabel="favButton">
+                                            <rect key="frame" x="335" y="110" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="G2a-5A-u12"/>
+                                                <constraint firstAttribute="height" constant="30" id="NAL-OP-nit"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="c6Z-tW-Y0Z"/>
+                                                <constraint firstAttribute="width" constant="30" id="vBx-WA-VVO"/>
+                                            </constraints>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="favor-icon" title=""/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="pAo-lV-WPL" eventType="touchUpInside" id="Smb-j4-vGE"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UQ8-wC-nOI" userLabel="retweet button ">
+                                            <rect key="frame" x="273" y="110" width="54" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="i3C-uH-lL9"/>
+                                                <constraint firstAttribute="width" constant="54" id="mNy-ZL-6in"/>
+                                            </constraints>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="retweet-icon" title=""/>
+                                            <connections>
+                                                <action selector="retweet:" destination="pAo-lV-WPL" eventType="touchUpInside" id="jvM-fu-GZv"/>
+                                            </connections>
+                                        </button>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Jq-2g-ryn">
+                                            <rect key="frame" x="26" y="18" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="FtH-Ey-deE"/>
+                                                <constraint firstAttribute="height" constant="65" id="LLb-bG-Hwr"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="1Jq-2g-ryn" firstAttribute="top" secondItem="jMU-EM-QkF" secondAttribute="topMargin" constant="7" id="0A3-IV-iwk"/>
                                         <constraint firstItem="1Jq-2g-ryn" firstAttribute="leading" secondItem="jMU-EM-QkF" secondAttribute="leadingMargin" constant="10" id="0fl-Wq-pVd"/>
-                                        <constraint firstItem="ahb-6q-1UR" firstAttribute="leading" secondItem="1Jq-2g-ryn" secondAttribute="trailing" constant="8" id="36o-Az-061"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ahb-6q-1UR" secondAttribute="trailing" constant="20" symbolic="YES" id="H27-wt-cR1"/>
                                         <constraint firstItem="ahb-6q-1UR" firstAttribute="leading" secondItem="1Jq-2g-ryn" secondAttribute="trailing" constant="8" id="Ilv-hs-gru"/>
+                                        <constraint firstItem="OOM-HZ-Pjs" firstAttribute="leading" secondItem="UQ8-wC-nOI" secondAttribute="trailing" constant="8" symbolic="YES" id="J1r-uz-0nt"/>
                                         <constraint firstItem="ahb-6q-1UR" firstAttribute="top" secondItem="jMU-EM-QkF" secondAttribute="topMargin" id="JIk-AJ-ZaN"/>
-                                        <constraint firstItem="N6f-8F-IY8" firstAttribute="leading" secondItem="1Jq-2g-ryn" secondAttribute="trailing" constant="8" id="TQc-j9-yf1"/>
-                                        <constraint firstItem="ahb-6q-1UR" firstAttribute="leading" secondItem="1Jq-2g-ryn" secondAttribute="trailing" constant="8" id="X1E-5l-ihK"/>
-                                        <constraint firstItem="ahb-6q-1UR" firstAttribute="leading" secondItem="1Jq-2g-ryn" secondAttribute="trailing" constant="8" id="dm6-JE-FV3"/>
-                                        <constraint firstAttribute="bottom" secondItem="N6f-8F-IY8" secondAttribute="bottom" constant="10" id="fKb-F5-Wev"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="1Jq-2g-ryn" secondAttribute="bottom" id="htx-j6-I4x"/>
+                                        <constraint firstItem="N6f-8F-IY8" firstAttribute="leading" secondItem="1Jq-2g-ryn" secondAttribute="trailing" constant="10" id="UeQ-h0-7s0"/>
+                                        <constraint firstAttribute="bottom" secondItem="UQ8-wC-nOI" secondAttribute="bottom" constant="10" id="gRS-T6-V3I"/>
+                                        <constraint firstAttribute="trailing" secondItem="OOM-HZ-Pjs" secondAttribute="trailing" constant="10" id="hcM-Du-wlr"/>
+                                        <constraint firstItem="UQ8-wC-nOI" firstAttribute="top" secondItem="N6f-8F-IY8" secondAttribute="bottom" constant="10" id="iVy-Cl-Jnb"/>
+                                        <constraint firstItem="OOM-HZ-Pjs" firstAttribute="top" secondItem="N6f-8F-IY8" secondAttribute="bottom" constant="10" id="jrE-xy-cQY"/>
                                         <constraint firstAttribute="trailing" secondItem="N6f-8F-IY8" secondAttribute="trailing" constant="8" id="mEx-6h-xqb"/>
                                         <constraint firstItem="ahb-6q-1UR" firstAttribute="leading" secondItem="1Jq-2g-ryn" secondAttribute="trailing" constant="8" id="mSb-Fz-Hfm"/>
                                         <constraint firstItem="N6f-8F-IY8" firstAttribute="top" secondItem="ahb-6q-1UR" secondAttribute="bottom" constant="10" id="sT4-AC-r95"/>
-                                        <constraint firstItem="1Jq-2g-ryn" firstAttribute="top" secondItem="jMU-EM-QkF" secondAttribute="topMargin" id="zyo-yW-mAZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="OOM-HZ-Pjs" secondAttribute="bottom" constant="10" id="vXD-CD-sSQ"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="UserNameLabel" destination="ahb-6q-1UR" id="nBa-g5-srB"/>
+                                    <outlet property="favButton" destination="OOM-HZ-Pjs" id="mr5-bB-IVe"/>
                                     <outlet property="profileImageView" destination="1Jq-2g-ryn" id="Fb1-nt-3TY"/>
+                                    <outlet property="retweetbutton" destination="UQ8-wC-nOI" id="Uuh-SU-3Bk"/>
                                     <outlet property="tweetContent" destination="N6f-8F-IY8" id="5QG-6m-4UF"/>
                                 </connections>
                             </tableViewCell>
@@ -122,11 +156,64 @@
                                 <action selector="onLogout:" destination="oxo-Ut-OUV" id="exG-Kp-BL4"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" style="plain" id="nEZ-CI-A6u">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="QQK-UB-uJc" kind="presentation" id="tIi-xK-wj7"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SgF-Ov-uBJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1029.5999999999999" y="-349.47526236881561"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="tNh-0q-Bqr">
+            <objects>
+                <viewController id="nJi-fJ-Kqq" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OXL-6B-E2c">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="mKB-c6-MZJ">
+                                <rect key="frame" x="0.0" y="44" width="375" height="227"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="hBW-lC-LKL"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="E8S-HM-XQ4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mKB-c6-MZJ" firstAttribute="top" secondItem="OXL-6B-E2c" secondAttribute="top" id="UKh-eZ-UwZ"/>
+                            <constraint firstItem="mKB-c6-MZJ" firstAttribute="leading" secondItem="E8S-HM-XQ4" secondAttribute="leading" id="pT8-aY-Jdf"/>
+                            <constraint firstItem="E8S-HM-XQ4" firstAttribute="trailing" secondItem="mKB-c6-MZJ" secondAttribute="trailing" id="y4K-Ap-2Da"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="KAi-6f-bZ4">
+                        <barButtonItem key="leftBarButtonItem" title="cancel" id="IlI-6A-cpB">
+                            <connections>
+                                <action selector="cancel:" destination="nJi-fJ-Kqq" id="GgY-Lk-Wm0"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" style="plain" id="aTb-P9-O5D">
+                            <connections>
+                                <action selector="tweet:" destination="nJi-fJ-Kqq" id="PeX-4D-RXv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="mKB-c6-MZJ" id="XqK-qc-Zb2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zsx-UU-jkm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2716" y="-335.08245877061472"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ust-jt-a89">
@@ -155,8 +242,32 @@
             </objects>
             <point key="canvasLocation" x="257" y="-349"/>
         </scene>
+        <!--Tweet Navigation Controller-->
+        <scene sceneID="ivf-h2-0Eu">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QQK-UB-uJc" userLabel="Tweet Navigation Controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2rk-DI-XZc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.1700970986" green="0.38867283759999999" blue="0.73708742729999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="nJi-fJ-Kqq" kind="relationship" relationship="rootViewController" id="9ZT-Il-7j5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k3P-6t-x98" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1776.8" y="-335.08245877061472"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
